# cohenix_frontend_starter

./: CHANGELOG.md  IMPLEMENTATION_COMPLETE.md  MODERNIZATION_SUMMARY.md  README.md  pyproject.toml
doppio/commands/: boilerplates.py  desk_page.py  frappe_ui.py  spa_generator.py
libs/controllers/: auth.js
