[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doppio"
version = "0.0.1"
description = "A Frappe App to setup and manage single page applications and custom desk pages (using Vue 3 or React) on your custom Frappe App."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Hussain Nagaria", email = "hussainbhaitech@gmail.com"}
]
keywords = ["frappe", "vue", "react", "spa", "vite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Frappe",
]
requires-python = ">=3.10"
dependencies = [
    "frappe",
    "Click~=8.2.0"
]

[project.urls]
Homepage = "https://github.com/NagariaHussain/doppio"
Repository = "https://github.com/NagariaHussain/doppio.git"
Issues = "https://github.com/NagariaHussain/doppio/issues"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["doppio*"]

